syntax = "proto3";

option java_multiple_files = true;
package com.anthonykim.blog.grpc.service;

enum GrpcResponseState {
  OK = 0;
  BAD_REQUEST = 1;
  FORBIDDEN = 2;
  NOT_FOUND = 3;
  UNAUTHORIZED = 4;
  CONFLICT = 5;
  INTERNAL_SERVER_ERROR = 6;
}

message AttachedFile {
  string fileKey = 1;
  string downloadUri = 2;
  string filename = 3;
  string fileExtension = 4;
  int64 fileSize = 5;
}

message CreatePostRequest {
  string username = 1;
  string userFullName = 2;
  repeated string tag = 3;
  string title = 4;
  string body = 5;
  AttachedFile attachedFile = 6;
}

message CreatePostResponse {
  GrpcResponseState state = 1;
  string postId = 2;
}

service PostService {
  rpc createPost (CreatePostRequest) returns (CreatePostResponse);
}
